# java_lsp

./: .gitignore  .typos.toml  Cargo.toml  README.md  default.nix  flake.nix  justfile  rust-toolchain.toml
ast/: Cargo.toml
ast/benches/: base.rs
ast/src/: annotation.rs  class.rs  enumeration.rs  error.rs  interface.rs  lexer.rs  lib.rs  module.rs  range.rs  record.rs  skip_helper.rs  types.rs
ast/src/snapshots/: ast__lexer__tests__escaped_backslash.snap  ast__lexer__tests__escaped_double_quetes.snap  ast__lexer__tests__everything.snap  ast__lexer__tests__local_variable_table.snap  ast__lexer__tests__super_interface.snap  ast__lexer__tests__supere.snap  ast__lexer__tests__thrower.snap  ast__tests__annotation.snap  ast__tests__constants.snap  ast__tests__equasion_method_call.snap  ast__tests__everything.snap  ast__tests__expression_array_access.snap  ast__tests__expression_base.snap  ast__tests__expression_incomplete.snap  ast__tests__expression_multi_array_access.snap  ast__tests__interface_base.snap  ast__tests__locale_variable_table.snap  ast__tests__more_syntax.snap  ast__tests__more_syntax.snap.new  ast__tests__multi_line_string.snap  ast__tests__skip_comments.snap  ast__tests__super_interface.snap  ast__tests__superee.snap  ast__tests__types.snap  ast__tests__value_control.snap  ast__tests__variable_array.snap  ast__tests__variants.snap
ast/test/: FullOffComments.java
ast/tests/: ast.rs
ast/tests/snapshots/: ast__annotated.snap  ast__annotated.snap.new  ast__annotation.snap  ast__cast.snap  ast__casted_calculation.snap  ast__class_block_annotation.snap  ast__class_colon_colon_new.snap  ast__class_colon_colon_new.snap.new  ast__class_var_hashmap_genirics.snap  ast__constants.snap  ast__double_plus.snap  ast__equal_expr.snap  ast__equasion_method_call.snap  ast__equasion_method_call.snap.new  ast__everything.snap  ast__everything.snap.new  ast__expression_array_access.snap  ast__expression_base.snap  ast__expression_base.snap.new  ast__expression_multi_array_access.snap  ast__interface_base.snap  ast__jtype_access.snap.new  ast__jtype_class_generic.snap  ast__jtype_geneic_array.snap  ast__jtype_int.snap  ast__jtype_int_array.snap  ast__jtype_package.snap  ast__lambda.snap  ast__lambda.snap.new  ast__lambda_1.snap  ast__lambda_2.snap  ast__lambda_expr.snap  ast__lambda_expr.snap.new  ast__lambda_in_expression.snap  ast__lambda_value.snap  ast__lambda_with_no_parameters.snap  ast__lambda_with_types.snap  ast__locale_variable_table.snap  ast__long_expr.snap  ast__method_no_body.snap  (+18 more)
call_chain/: Cargo.toml
call_chain/src/: lib.rs
call_chain/tests/: base.rs
call_chain/tests/snapshots/: base__call_chain_argument_active_param_not_last.snap  base__call_chain_argument_active_param_not_last.snap.new  base__call_chain_argument_base.snap  base__call_chain_argument_base.snap.new  base__call_chain_argument_calc.snap  base__call_chain_argument_calc.snap.new  base__call_chain_argument_field.snap  base__call_chain_argument_field.snap.new  base__call_chain_argument_second_var_base.snap  base__call_chain_argument_second_var_base.snap.new  base__call_chain_argument_second_var_no_dot.snap  base__call_chain_argument_second_var_no_dot.snap.new  base__call_chain_argument_var_base.snap  base__call_chain_argument_var_base.snap.new  base__call_chain_argument_var_no_dot.snap  base__call_chain_argument_var_no_dot.snap.new  base__call_chain_base.snap.new  base__call_chain_class.snap  base__call_chain_class.snap.new  base__call_chain_field_base.snap.new  base__call_chain_field_method.snap.new  base__call_chain_if_condition.snap  base__call_chain_menthod_field.snap  base__call_chain_method_base.snap  base__call_chain_method_info.snap  base__call_chain_new_instance_base.snap  base__call_chain_new_instance_field.snap  base__call_chain_semicolon_field.snap  base__call_chain_semicolon_method.snap  base__call_chain_semicolon_simple.snap  base__call_chain_statement.snap  base__call_chain_string.snap  base__call_chain_varible_class.snap
class/: Cargo.toml
class/src/: lib.rs
cli/: Cargo.toml
cli/src/: lib.rs
common/: Cargo.toml  config.ncl  schema.ncl
common/src/: cli.rs  compile.rs  config.rs  jdk.rs  lib.rs  project_kind.rs
common/src/snapshots/: common__compile__tests__parse_compile_errors_basic.snap  common__compile__tests__parse_compile_errors_real.snap
compile/: Cargo.toml
compile/src/: lib.rs
crates/ast/: Cargo.toml
crates/ast/src/: annotation.rs  (+11 more)
crates/call_chain/: Cargo.toml
crates/cli/: Cargo.toml
crates/common/: Cargo.toml
crates/compile/: Cargo.toml
crates/document/: Cargo.toml
crates/dto/: Cargo.toml
document/: Cargo.toml
document/src/: lib.rs
format/: Cargo.toml
format/src/: lib.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: cfc.rs  parser_class.rs  parser_java.rs  parser_jimage.rs  parser_module.rs
gradle/: Cargo.toml
gradle/src/: compile.rs  fetch.rs  lib.rs  project.rs  tree.rs
gradle/tests/: compile_basic.txt  dependencies_report.txt
imports/: Cargo.toml
imports/src/: lib.rs
java_lsp/: Cargo.toml
java_lsp/src/: main.rs
jdk/: Cargo.toml
jdk/src/: lib.rs
loader/: Cargo.toml
loader/src/: lib.rs
lsp_extra/: Cargo.toml
lsp_extra/src/: lib.rs
maven/: Cargo.toml
maven/src/: compile.rs  fetch.rs  lib.rs  pom.rs  project.rs  tree.rs
maven/tests/: tverify.bacic.txt
parser/: Cargo.toml
parser/src/: call_chain.rs  class.rs  dto.rs  java.rs  lib.rs  loader.rs
parser/test/: Annotated.java  Constants.java  Enum.java  Everything.java  Interface.java  InterfaceBase.java  LocalVariableTable.java  Super.java  Syntax.java  Types.java  Variants.java  build.sh
position/: Cargo.toml
position/src/: lib.rs
server/: Cargo.toml
server/src/: backend.rs  call_chain.rs  codeaction.rs  completion.rs  definition.rs  document.rs  hover.rs  imports.rs  lib.rs  main.rs  position.rs  references.rs  router.rs  signature.rs  tyres.rs  utils.rs  variable.rs
tree-sitter-util/: Cargo.toml
tree-sitter-util/src/: lib.rs  lsp.rs
tyres/: Cargo.toml
tyres/src/: lib.rs  parent.rs
variables/: Cargo.toml
variables/src/: lib.rs
(+312 files in other folders)
