[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["emilycares"]
homepage = "https://github.com/emilycares/java_lsp"
repository = "https://github.com/emilycares/java_lsp"
documentation = "https://github.com/emilycares/java_lsp"
readme = "README.md"
license = "GPL 3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "crates/parser",
    "crates/maven",
    "crates/server",
    "crates/format",
    "crates/gradle",
    "crates/common",
    "crates/compile",
    "crates/jdk",
    "crates/config",
    "crates/cli",
    "crates/call_chain",
    "crates/variables",
    "crates/document",
    "crates/tyres",
    "crates/position",
    "crates/imports",
    "crates/java_lsp",
    "crates/zip_util",
    "crates/ast",
    "crates/get_class",
    "crates/loader",
    "crates/my_string",
    "crates/lsp_extra",
]
resolver = "3"

[profile.dev]
# Remove for debugging
# debug = "line-tables-only"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
# debug = true
# incremental = true
lto = "fat"

[workspace.dependencies]
bitflags = { version = "2.10", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
classfile-parser = { git = "https://github.com/emilycares/classfile-parser.git" , branch = "fix/source_file" }
once_cell = "1.20.3"
dashmap = "6.0.1"
postcard = { version = "1.0.0", features = ["alloc"] }
pretty_assertions = "1.4"
ropey = "1.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
lsp-server = "0.7.8"
lsp-types = "0.97.0"
jwalk = "0.8.1"
rc-zip-tokio = "4.3.1"
dirs = "6.0.0"
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.11.0"
insta = { version = "1.43.1", default-features = false }
memmap2 = "0.9.9"
sha1_smol = "1.0.1"
reqwest = "0.13.1"
