[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["emilycares"]
homepage = "https://github.com/emilycares/java_lsp"
repository = "https://github.com/emilycares/java_lsp"
documentation = "https://github.com/emilycares/java_lsp"
readme = "README.md"
license = "GPL-3.0"

[workspace.metadata.crane]
name = "java_lsp"

[workspace.metadata.cargo-machete]
ignored = ["workspace_hack"]

[workspace]
members = [
    "crates/parser",
    "crates/maven",
    "crates/server",
    "crates/format",
    "crates/gradle",
    "crates/common",
    "crates/compile",
    "crates/jdk",
    "crates/config",
    "crates/cli",
    "crates/call_chain",
    "crates/variables",
    "crates/document",
    "crates/tyres",
    "crates/position",
    "crates/imports",
    "crates/java_lsp",
    "crates/workspace_hack",
    "crates/zip_util",
    "crates/ast",
    "crates/get_class",
    "crates/loader",
    "crates/my_string",
    "crates/lsp_extra",
    "crates/jimage",
    "crates/dto",
    "crates/local_variable",
]
resolver = "3"

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[profile.release]
debug = "line-tables-only"
# debug = true
# incremental = true
# lto = "fat"

[workspace.dependencies]
# In this project
dto = { path = "crates/dto"}
parser = { path = "crates/parser"}
ast = { path = "crates/ast"}
jimage = { path = "crates/jimage"}
maven = { path = "crates/maven"}
server = { path = "crates/server"}
format = { path = "crates/format"}
gradle = { path = "crates/gradle"}
common = { path = "crates/common"}
compile = { path = "crates/compile"}
jdk = { path = "crates/jdk"}
config = { path = "crates/config"}
cli = { path = "crates/cli"}
call_chain = { path = "crates/call_chain"}
variables = { path = "crates/variables"}
document = { path = "crates/document"}
tyres = { path = "crates/tyres"}
position = { path = "crates/position"}
imports = { path = "crates/imports"}
java_lsp = { path = "crates/java_lsp"}
zip_util = { path = "crates/zip_util"}
get_class = { path = "crates/get_class"}
loader = { path = "crates/loader"}
my_string = { path = "crates/my_string"}
lsp_extra = { path = "crates/lsp_extra"}
local_variable = { path = "crates/local_variable"}

# Rest
bitflags = { version = "2.10.0", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
classfile-parser = { git = "https://github.com/emilycares/classfile-parser.git", branch = "module" }
# classfile-parser = { path = "../classfile-parser" }
postcard = { version = "1.1.3", features = ["alloc"] }
pretty_assertions = "1.4.1"
ropey = "1.6.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde-xml-rs = "0.8.2"
tokio = { version = "1.51.1", features = ["full"] }
lsp-server = "0.7.9"
lsp-types = "0.97.0"
jwalk = "0.8.1"
rc-zip-tokio = "4.3.1"
dirs = "6.0.0"
phf = { version = "0.13.1", features = ["macros"] }
rayon = "1.11.0"
insta = { version = "1.46.2", default-features = false }
memmap2 = "0.9.9"
memchr = "2.7.6"
sha1_smol = "1.0.1"
reqwest = "0.13.2"
smol_str = { version= "0.3.6", features = ["serde"]}
