[package]
name = "call_chain"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
ast = { path = "../ast"}
my_string = { path = "../my_string"}

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
