[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
jwalk.workspace = true
tokio.workspace = true
ast = { path = "../ast"}

