[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
nom.workspace = true
dashmap.workspace = true
parser = { path = "../parser"}
nickel-lang-core.workspace = true
serde.workspace = true
once_cell.workspace = true
dirs.workspace = true
zip-extract.workspace = true
tokio.workspace = true
futures.workspace = true
parking_lot.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
