[package]
name = "compile"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
nom.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
