[package]
name = "document"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
lsp-types.workspace = true
ropey.workspace = true
dashmap.workspace = true
tree-sitter.workspace = true
tree-sitter-util = { path = "../tree-sitter-util"}
parser = { path = "../parser"}

[dev-dependencies]
pretty_assertions.workspace = true
