[package]
name = "document"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
lsp-types.workspace = true
ropey.workspace = true
dashmap.workspace = true
ast = { path = "../ast"}
parser = { path = "../parser"}
my_string = { path = "../my_string"}

[dev-dependencies]
pretty_assertions.workspace = true
