[package]
name = "format"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
topiary-queries.workspace = true
topiary-core.workspace = true
topiary-config.workspace = true
tokio.workspace = true
config = { path = "../config" }
