[package]
name = "parser-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.class]
path = "../crates/class"

[dependencies.jimage]
path = "../crates/jimage"

[dependencies.dto]
path = "../crates/dto"

[dependencies.dto_rw]
path = "../crates/dto_rw"

[dependencies.ast]
path = "../crates/ast"

[dependencies.my_string]
path = "../crates/my_string"

[[bin]]
name = "parser_class"
path = "fuzz_targets/parser_class.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_jimage"
path = "fuzz_targets/parser_jimage.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_module"
path = "fuzz_targets/parser_module.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_java"
path = "fuzz_targets/parser_java.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cfc"
path = "fuzz_targets/cfc.rs"
test = false
doc = false
bench = false
