[package]
name = "gradle"
version = "0.1.0"
edition = "2021"

[dependencies]
nom.workspace = true
dashmap.workspace = true
tokio.workspace = true
futures.workspace = true
itertools.workspace = true
parking_lot.workspace = true
common = {path = "../common"}
parser = {path = "../parser"}

[dev-dependencies]
pretty_assertions.workspace = true
