[package]
name = "gradle"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
nom.workspace = true
dashmap.workspace = true
tokio.workspace = true
futures.workspace = true
itertools.workspace = true
parking_lot.workspace = true
compile = {path = "../compile"}
common = {path = "../common"}
parser = {path = "../parser"}

[dev-dependencies]
pretty_assertions.workspace = true
