[package]
name = "gradle"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
nom.workspace = true
dashmap.workspace = true
tokio.workspace = true
itertools.workspace = true
my_string = { path = "../my_string"}
compile = {path = "../compile"}
common = {path = "../common"}
parser = {path = "../parser"}
loader = {path = "../loader"}

[dev-dependencies]
pretty_assertions.workspace = true
