[package]
name = "imports"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
document = { path = "../document" }
parser = { path = "../parser"}

[dev-dependencies]
pretty_assertions.workspace = true
