[package]
name = "jdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
parking_lot.workspace = true
dirs.workspace = true
zip-extract.workspace = true
parser = { path = "../parser" }

[dev-dependencies]
pretty_assertions.workspace = true
