[package]
name = "jdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
dashmap.workspace = true
futures.workspace = true
tokio.workspace = true
dirs.workspace = true
my_string = { path = "../my_string"}
parser = { path = "../parser" }
loader = {path = "../loader"}
zip_util = { path = "../zip_util" }
common = { path = "../common" }

[dev-dependencies]
pretty_assertions.workspace = true
