[package]
name = "loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
parser = { path = "../parser"}
ast = { path = "../ast"}
my_string = { path = "../my_string"}
jwalk.workspace = true
rc-zip-tokio.workspace = true
postcard.workspace = true
rayon.workspace = true
tokio.workspace = true
memmap2.workspace = true
