[package]
name = "maven"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde-xml-rs.workspace = true
nom.workspace = true
dashmap.workspace = true
zip-extract.workspace = true
dirs.workspace = true
tokio.workspace = true
futures.workspace = true
parking_lot.workspace = true
common = { path = "../common" }
parser = { path = "../parser" }

[dev-dependencies]
pretty_assertions.workspace = true
