[package]
name = "maven"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
dashmap.workspace = true
dirs.workspace = true
tokio.workspace = true
my_string = { path = "../my_string"}
common = { path = "../common" }
parser = {path = "../parser"}
loader = {path = "../loader"}
zip_util = { path = "../zip_util" }

[dev-dependencies]
pretty_assertions.workspace = true
