[package]
name = "parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tree-sitter-util = { path = "../tree-sitter-util"}
classfile-parser.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
jwalk.workspace = true
rayon.workspace = true
postcard.workspace = true
serde.workspace = true
itertools.workspace = true
rc-zip-tokio.workspace = true
tokio.workspace = true
phf.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
