[package]
name = "parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast"}
my_string = { path = "../my_string"}
classfile-parser.workspace = true
serde.workspace = true
itertools.workspace = true
postcard.workspace = true
insta.workspace = true
bitflags.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true
