[package]
name = "position"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
tree-sitter.workspace = true
tree-sitter-java.workspace = true
streaming-iterator.workspace = true
lsp-types.workspace = true
tree-sitter-util = { path = "../tree-sitter-util"}

[dev-dependencies]
pretty_assertions.workspace = true
