[package]
name = "position"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
lsp-types.workspace = true
ast = { path = "../ast"}

[dev-dependencies]
pretty_assertions.workspace = true
