[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
dashmap.workspace = true
ropey.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
streaming-iterator.workspace = true
itertools.workspace = true
format = { path = "../format"}
parser = { path = "../parser"}
maven = { path = "../maven"}
gradle = { path = "../gradle"}
common = { path = "../common"}
tree-sitter-util = { path = "../tree-sitter-util" }

[dev-dependencies]
pretty_assertions.workspace = true
