[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
dashmap.workspace = true
ropey.workspace = true
tree-sitter.workspace = true
tree-sitter-java.workspace = true
serde_json.workspace = true
rayon.workspace = true
parking_lot.workspace = true
format = { path = "../format"}
parser = { path = "../parser"}
maven = { path = "../maven"}
gradle = { path = "../gradle"}
imports = { path = "../imports"}
tyres = { path = "../tyres"}
position = { path = "../position"}
document = { path = "../document"}
variables = { path = "../variables"}
jdk = { path = "../jdk"}
compile = { path = "../compile"}
call_chain = { path = "../call_chain" }
common = { path = "../common"}
tree-sitter-util = { path = "../tree-sitter-util" }

[dev-dependencies]
pretty_assertions.workspace = true
