[package]
name = "tyres"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
dashmap.workspace = true
tree-sitter.workspace = true
parser = { path = "../parser"}
call_chain = { path = "../call_chain"}
variables = { path = "../variables"}
tree-sitter-util = { path = "../tree-sitter-util"}
