[package]
name = "tyres"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
smol_str.workspace = true
dashmap.workspace = true
parser = { path = "../parser"}
call_chain = { path = "../call_chain"}
variables = { path = "../variables"}
ast = { path = "../ast"}
