[package]
name = "variables"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
itertools.workspace = true
document = {path = "../document"}
parser = {path = "../parser"}
ast = {path = "../ast"}

[dev-dependencies]
pretty_assertions.workspace = true
