[package]
name = "variables"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
smol_str.workspace = true
parser = {path = "../parser"}
ast = {path = "../ast"}

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
