[package]
name = "ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
phf.workspace = true
bitflags.workspace = true
my_string = { path = "../my_string"}
memchr.workspace = true

[dev-dependencies]
insta.workspace = true
