[package]
name = "ast"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true
publish = false


[dependencies]
phf.workspace = true
bitflags.workspace = true
my_string.workspace = true
memchr.workspace = true
workspace_hack = { version = "0.1", path = "../workspace_hack" }

[dev-dependencies]
insta.workspace = true
