[package]
name = "call_chain"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
ast.workspace = true
my_string.workspace = true
workspace_hack = { version = "0.1", path = "../workspace_hack" }

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
