[package]
name = "cli"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
jwalk.workspace = true
tokio.workspace = true
memmap2.workspace = true
ast = { path = "../ast"}
workspace_hack = { version = "0.1", path = "../workspace_hack" }

