[package]
name = "common"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
workspace_hack = { version = "0.1", path = "../workspace_hack" }
