[package]
name = "compile"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[dependencies]
workspace_hack = { version = "0.1", path = "../workspace_hack" }
