[package]
name = "document"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
lsp-types.workspace = true
ropey.workspace = true
ast = { path = "../ast"}
parser = { path = "../parser"}
lsp_extra = { path = "../lsp_extra"}
my_string = { path = "../my_string"}
workspace_hack = { version = "0.1", path = "../workspace_hack" }

[dev-dependencies]
pretty_assertions.workspace = true
