[package]
name = "dto"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
my_string.workspace = true
serde.workspace = true
bitflags.workspace = true
workspace_hack = { version = "0.1", path = "../workspace_hack" }
